Fix sidebar z-index

--- a/public/assets/src/sidebar/less/components/_sidebar.less
+++ b/public/assets/src/sidebar/less/components/_sidebar.less
@@ -8,7 +8,7 @@
   padding-bottom: @sidebar-height + @sidebar-margin;
   position: fixed;
   transition: all .25s;
-  z-index: 100;
+  z-index: 999;
 
   .sidebar-wrapper {
     height: 100%;
